--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,14 +9,26 @@
         android:id="@+id/chatListFragment"
         android:name="com.nezamipour.mehdi.dota2teamfinder.view.fragment.ChatListFragment"
         android:label="fragment_chat_list"
-        tools:layout="@layout/fragment_chat_list" >
+        tools:layout="@layout/fragment_chat_list">
         <action
             android:id="@+id/action_chatListFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_chatListFragment_to_loginDialogFragment"
+            app:destination="@id/loginDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.nezamipour.mehdi.dota2teamfinder.view.fragment.ChatFragment"
         android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat" >
+        <argument
+            android:name="chatRoomName"
+            app:argType="string" />
+    </fragment>
+    <dialog
+        android:id="@+id/loginDialogFragment"
+        android:name="com.nezamipour.mehdi.dota2teamfinder.view.fragment.LoginDialogFragment"
+        android:label="fragment_login_dialog"
+        tools:layout="@layout/fragment_login_dialog" />
 </navigation>
